Small changes for updated methods

--- a/Demos/MomsData_Interpolation_and_Vectors.ipynb
+++ b/Demos/MomsData_Interpolation_and_Vectors.ipynb
@@ -133,7 +133,7 @@
      "output_type": "stream",
      "text": [
       "The average and std of z values on a z-plane can be easily obtained with z[0,:,:]\n",
-      "-2486.979 0.0\n",
+      "-2486.9789237976074 0.0\n",
       "This is the \"bottom\" z-plane of the simulation\n"
      ]
     }
@@ -166,26 +166,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now make plots of perturbations of say pressure, $(P - <P>) / <P>$, at a particular radius as well as plotting radial velocities at a surface. This is possible with a trillinear interpolation of a quantity on the grid"
+    "We can now make plots of any quantity at the surface of a sphere. This is possible with a trillinear or \"moments\" (quadratic) interpolation of a quantity on the grid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The percent difference between the mean of these norms is 8.52e-09\n"
+      "The percent difference between the mean of these norms is 1.01e-08\n"
      ]
     }
    ],
    "source": [
     "# let's take a look at the radial velocities at the convective boundary\n",
     "# we will say that the convective boundary is when the gradient of FV is largest\n",
-    "conv_radius = thisrprof.boundary_radius([thismoms.what_dump_am_i],500.,1800.,'FV','max_grad')\n",
+    "conv_radius = thisrprof.bound_rad([thismoms.what_dump_am_i],500.,1800.,'FV','max_grad')\n",
     "\n",
     "# problem is in the data we have |ur|, what about direction?\n",
     "# we can use ux, uy and uz to construct ur, utheta and uphi!\n",
@@ -214,13 +214,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\u001b[0;31mSignature:\u001b[0m \u001b[0mthisrprof\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mboundary_radius\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcycles\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr_min\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr_max\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvar\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'ut'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'min_grad'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvar_value\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreturn_var_scale_height\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1e-09\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mSignature:\u001b[0m \u001b[0mthisrprof\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbound_rad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcycles\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr_min\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr_max\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvar\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'ut'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'min_grad'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvar_value\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreturn_var_scale_height\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1e-09\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
        "\u001b[0;31mDocstring:\u001b[0m\n",
        "Method that finds the radius of a convective boundary.\n",
        "\n",
@@ -279,21 +279,21 @@
     }
    ],
    "source": [
-    "thisrprof.boundary_radius?"
+    "thisrprof.bound_rad?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\u001b[0;31mSignature:\u001b[0m \u001b[0mthismoms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_interpolation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvarloc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mradius\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplot_mollweide\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnpoints\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mperturbation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mSignature:\u001b[0m \u001b[0mthismoms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_spherical_interpolation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvarloc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mradius\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'trilinear'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mderivative\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogvarloc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoefficients\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mget_igrid\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplot_mollweide\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnpoints\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
        "\u001b[0;31mDocstring:\u001b[0m\n",
-       "Returns the trillinear interpolated array of values of 'varloc' at a radius of\n",
-       "'radius' as well as the 'theta,phi' (mollweide) coordinates of the 'varloc' values\n",
+       "Returns the interpolated array of values of 'varloc' at a radius of 'radius' for a computed uniform distribution of points,\n",
+       "'npoints', on that sphere(s). It can return the 'theta,phi' (mollweide) coordinates of the 'varloc' values as well.\n",
        "\n",
        "Parameters\n",
        "----------\n",
@@ -306,19 +306,43 @@
        "fname: None,int\n",
        "    None: default option, will grab current dump\n",
        "    int: Dump number\n",
+       "method: str\n",
+       "    'trilinear' (fast): Use a trilinear method to interpolate onto the points on igrid\n",
+       "    'moments' (slower): Use a moments averaging within a cell and using a quadratic function as the form for the interpolation\n",
+       "derivative: str\n",
+       "    The default is NO derivative, i.e an empty string.\n",
+       "\n",
+       "    Do you want the interpolated values to be of the gradient of varloc in the 'xyz' directions?\n",
+       "    If you only want the x direction supply the string 'x' or if x and z then 'xz'. Must be the 'moments' method\n",
+       "       method = 'moments': Use the analytic derivative of the moments quadratic function\n",
+       "logvarloc: bool\n",
+       "    For better fitting should I do varloc = np.log10(varloc)? This also changes how derivatives are handled for method='moments'\n",
+       "    The returned varloc_interpolated will be scaled back\n",
+       "coefficients: bool\n",
+       "    In some cases you may want the coefficients for a particular interpolation scheme\n",
+       "get_igrid: bool\n",
+       "    In some cases you may want the actual grid points used for the particular interpolation scheme\n",
+       "plot_mollweide: bool\n",
+       "    Typically you want the theta, phi coordinates of the interpolated values so that it can be plotted with a projection method\n",
        "npoints: int\n",
        "    The number of 'theta and phi' points you want for a projection plot\n",
-       "perturbation: bool\n",
-       "    Do we subtract off the average (on a sphere) from 'varloc' being interpolated and\n",
-       "    then scale it by that average (on a sphere)? i.e varloc_interpolated = (varloc - <varloc>)/<varloc>\n",
        "\n",
        "Returns\n",
        "-------\n",
        "plot_mollweide: True\n",
-       "    varloc_interpolated,theta,phi: np.ndarray or list\n",
+       "    varloc_interpolated, theta, phi: np.ndarray or list\n",
        "\n",
        "plot_mollweide: False\n",
        "    varloc_interpolated: np.ndarray or list\n",
+       "\n",
+       "derivative: Not Empty\n",
+       "    [varloc_interpolated]\n",
+       "\n",
+       "coefficients: True\n",
+       "    varloc_interpolated, coefficients, ...\n",
+       "\n",
+       "get_igrid: True\n",
+       "    varloc_interpolated, ..., igrid\n",
        "\u001b[0;31mFile:\u001b[0m      ~/home/PyPPM/ppmpy/ppm.py\n",
        "\u001b[0;31mType:\u001b[0m      method\n"
       ]
@@ -328,49 +352,40 @@
     }
    ],
    "source": [
-    "thismoms.get_interpolation?"
+    "thismoms.get_spherical_interpolation?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "For a perturbation the mean should be zero, 9.59e-17\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# so our ur is fine, get its trillinear interpolated value at the convective boundary\n",
     "# scale velocity by it's norm\n",
-    "ur_at_r, theta_grid, phi_grid = thismoms.get_interpolation(ur/u_normc,conv_radius)\n",
-    "utheta_at_r = thismoms.get_interpolation(utheta/u_normc,conv_radius,plot_mollweide=False)\n",
-    "uphi_at_r = thismoms.get_interpolation(uphi/u_normc,conv_radius,plot_mollweide=False)\n",
+    "ur_at_r, theta_grid, phi_grid = thismoms.get_spherical_interpolation(ur/u_normc,conv_radius)\n",
+    "utheta_at_r = thismoms.get_spherical_interpolation(utheta/u_normc,conv_radius,plot_mollweide=False)\n",
+    "uphi_at_r = thismoms.get_spherical_interpolation(uphi/u_normc,conv_radius,plot_mollweide=False)\n",
     "\n",
-    "# get a perturbation of the density\n",
-    "rho_pert_at_r = thismoms.get_interpolation('rho',conv_radius,plot_mollweide=False,perturbation=True)\n",
-    "print('For a perturbation the mean should be zero, {:0.2e}'.format(np.mean(rho_pert_at_r)))\n",
+    "# get the density on the boundary\n",
+    "p_at_r = thismoms.get_spherical_interpolation('P',conv_radius,plot_mollweide=False,method='moments')\n",
     "\n",
     "# to understand where you are looking on a mollweide plot, plot xc\n",
-    "xc = thismoms.get_interpolation('xc',conv_radius,plot_mollweide=False)\n",
+    "xc = thismoms.get_spherical_interpolation('xc',conv_radius,plot_mollweide=False)\n",
     "\n",
     "# figure counter\n",
-    "ifig = 0"
+    "# ifig = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2134d736125547e18f63cf0cc8d80c1e",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -385,9 +400,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7f72ed0dbd68>\n",
+      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fee420fd860>\n",
       "DEBUG:matplotlib.colorbar:Using auto colorbar locator on colorbar\n",
-      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7f72ed0dbd68>\n",
+      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fee420fd860>\n",
       "DEBUG:matplotlib.colorbar:Setting pcolormesh\n"
      ]
     },
@@ -397,14 +412,14 @@
        "Text(0.5, 1.0, 'R = 1534 Mm')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# now we can plot with a mollweide projection\n",
-    "ifig +=1; plt.figure(ifig)\n",
+    "plt.close(ifig); ifig +=1; plt.figure(ifig)\n",
     "\n",
     "# we want a mollweide projection\n",
     "ax = plt.subplot(111, projection = 'mollweide')\n",
@@ -423,13 +438,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dbf707176b9042a5be149bea0f989ad5",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -444,9 +459,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7f72e6c41710>\n",
+      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fee40e05208>\n",
       "DEBUG:matplotlib.colorbar:Using auto colorbar locator on colorbar\n",
-      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7f72e6c41710>\n",
+      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fee40e05208>\n",
       "DEBUG:matplotlib.colorbar:Setting pcolormesh\n"
      ]
     },
@@ -456,14 +471,14 @@
        "Text(0.5, 1.0, 'R = 1534 Mm')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# now we can plot with a mollweide projection\n",
-    "ifig +=1; plt.figure(ifig)\n",
+    "plt.close(ifig); ifig +=1; plt.figure(ifig)\n",
     "\n",
     "# we want a mollweide projection\n",
     "ax = plt.subplot(111, projection = 'mollweide')\n",
@@ -483,43 +498,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Instead of plotting the density \"perturbations\", look at the radial pressure gradient \"perturbations\" which are a source of flow in the radial direction"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# this is a list of the cartesian gradient of P: Px, Py, Pz\n",
-    "pgrad = thismoms.gradient('P')\n",
-    "\n",
-    "# convert to spherical coordinates, grad P dot (rhat,theta-hat,phi-hat)\n",
-    "P = thismoms.get_spherical_components(pgrad[0],pgrad[1],pgrad[2])\n",
-    "\n",
-    "# we have the radial gradient, the source is -grad P\n",
-    "Pr = -1. * P[0]\n",
-    "Ptheta = -1. * P[1]\n",
-    "Pphi = -1. * P[2]\n",
-    "\n",
-    "# scale by it's absolute value\n",
-    "pr_rprof_at_r = np.mean(thismoms.get_interpolation(Pr,conv_radius,plot_mollweide=False))\n",
-    "pr_pert = thismoms.get_interpolation(Pr / abs(pr_rprof_at_r),conv_radius,plot_mollweide=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f440304f2c046caa72eb81c39060660",
+       "model_id": "91a25f2b76754f428aa3128a10b2f018",
        "version_major": 2,
        "version_minor": 0
       },
@@ -534,9 +520,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7f72e6575780>\n",
+      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fedf5a802e8>\n",
       "DEBUG:matplotlib.colorbar:Using auto colorbar locator on colorbar\n",
-      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7f72e6575780>\n",
+      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fedf5a802e8>\n",
       "DEBUG:matplotlib.colorbar:Setting pcolormesh\n"
      ]
     },
@@ -546,14 +532,14 @@
        "Text(0.5, 1.0, 'R = 1534 Mm')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# now we can plot with a mollweide projection\n",
-    "ifig +=1; plt.figure(ifig)\n",
+    "plt.close(ifig); ifig +=1; plt.figure(ifig)\n",
     "\n",
     "# we want a mollweide projection\n",
     "ax = plt.subplot(111, projection = 'mollweide')\n",
@@ -562,9 +548,9 @@
     "triang = tri.Triangulation(phi_grid,theta_grid)\n",
     "\n",
     "# scale velocity by it's norm\n",
-    "plt.tripcolor(triang,pr_pert,cmap='RdBu_r')\n",
+    "plt.tripcolor(triang,p_at_r,cmap='RdBu_r')\n",
     "cbar = plt.colorbar()\n",
-    "cbar.set_label('Pr / abs(<Pr>)')\n",
+    "cbar.set_label(r'P')\n",
     "\n",
     "ax.set_xticklabels([])\n",
     "ax.set_yticklabels([])\n",
@@ -586,7 +572,7 @@
    "outputs": [],
    "source": [
     "d_radius = 100.\n",
-    "ur_dipole = thismoms.get_interpolation(ur/u_normc,d_radius,plot_mollweide=False)"
+    "ur_dipole = thismoms.get_spherical_interpolation(ur/u_normc,d_radius,plot_mollweide=False)"
    ]
   },
   {
@@ -597,7 +583,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ffe05ac50b1c494e98a32da0448169cf",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -612,9 +598,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7f72e594aeb8>\n",
+      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fee0397eb38>\n",
       "DEBUG:matplotlib.colorbar:Using auto colorbar locator on colorbar\n",
-      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7f72e594aeb8>\n",
+      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fee0397eb38>\n",
       "DEBUG:matplotlib.colorbar:Setting pcolormesh\n"
      ]
     },
